--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
             <h2 class="text-light h4 m-0 p-5">精選</h2>
         </div>
     </div>
+    <!-- 說明列表 -->
+    <div class="container py-4">
+        <div class="row content-list">
+            <div class="col-lg-4 py-2 text-center">
+                <img src="https://pbs.twimg.com/profile_images/473506797462896640/_M0JJ0v8_400x400.png" alt="img">
+                <h3 class="text-center">Title</h3>
+                <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vero saepe ratione hic corporis modi laboriosam omnis libero nobis numquam ab aspernatur inventore eius quis exercitationem, amet soluta unde nesciunt?</p>
+            </div>
+            <div class="col-lg-4 py-2 text-center">
+                <img src="https://pbs.twimg.com/profile_images/473506797462896640/_M0JJ0v8_400x400.png" alt="img">
+                <h3 class="text-center">Title</h3>
+                <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vero saepe ratione hic corporis modi laboriosam omnis libero nobis numquam ab aspernatur inventore eius quis exercitationem, amet soluta unde nesciunt?</p>
+            </div>
+            <div class="col-lg-4 py-2 text-center">
+                <img src="https://pbs.twimg.com/profile_images/473506797462896640/_M0JJ0v8_400x400.png" alt="img">
+                <h3 class="text-center">Title</h3>
+                <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vero saepe ratione hic corporis modi laboriosam omnis libero nobis numquam ab aspernatur inventore eius quis exercitationem, amet soluta unde nesciunt?</p>
+            </div>
+        </div>
+    </div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
