--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
             </div>
         </div>
     </div>
-    <!--  -->
+    <!-- 文字小區 -->
     <div class="container-fluid bg-primary">
         <div class="row">
             <div class="col">
                 <p class="text-light text-center m-0 py-4">Lorem ipsum dolor</p>
             </div>
         </div>
+        <p>修正完成</p>
     </div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
