--- a/index.html
+++ b/index.html
@@ -62,6 +62,30 @@
         </div>
         <p>修正完成</p>
     </div>
+    <!-- form -->
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-lg-6">
+                <textarea name="chat" id="chat" class="form-control h-100"></textarea>
+            </div>
+            <div class="col-lg-6">
+                <h4 class="text-center mb-3">聯絡我們</h4>
+                <div class="form-group">
+                    <label for="name">姓名</label>
+                    <input type="text" id="name" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="tel">電話</label>
+                    <input type="tel" id="tel" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="mail">信箱</label>
+                    <input type="mail" id="mail" class="form-control">
+                </div>
+                <button class="btn btn-primary mt-3">送出</button>
+            </div>
+        </div>
+    </div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
