--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>修正完成</p>
     </div>
     <!-- form -->
-    <div class="container py-4">
+    <div class="container py-5">
         <div class="row">
             <div class="col-lg-6">
                 <textarea name="chat" id="chat" class="form-control h-100"></textarea>
@@ -86,6 +86,10 @@
             </div>
         </div>
     </div>
+    <!-- footer -->
+    <footer class="bg-secondary py-2">
+        <p class="m-0 text-center text-center text-light">copyright</p>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
