--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <li class="p-3"><a href="#">首頁</a></li>
                         <li class="p-3"><a href="#">關於我們</a></li>
                         <li class="p-3"><a href="#">產品</a></li>
+                        <li class="p-3"><a href="#">購物車</a></li>
                     </ul>
                 </div>
             </div>
