--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!-- banner -->
     <div class="banner">
         <div class="title-mask">
-            <h2 class="text-light h4 m-0 p-5">精選</h2>
+            <h2 class="text-light h4 m-0 p-5">嗨嗨~~
+            </h2>
         </div>
     </div>
     <!-- 說明列表 -->
