新增列表說明

--- a/index.html
+++ b/index.html
@@ -31,12 +31,23 @@
     <!-- banner -->
     <div class="banner">
         <div class="title-mask">
-            <h2 class="text-light h4 m-0 p-5">精選</h2>
+            <h2 class="text-light h4 m-0 p-5">嗨嗨~~
+            </h2>
         </div>
     </div>
     <!-- 說明列表 -->
     <div class="container py-4">
         <div class="row content-list">
+            <div class="col-lg-4 py-2 text-center">
+                <img src="https://pbs.twimg.com/profile_images/473506797462896640/_M0JJ0v8_400x400.png" alt="img">
+                <h3 class="text-center">Title</h3>
+                <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vero saepe ratione hic corporis modi laboriosam omnis libero nobis numquam ab aspernatur inventore eius quis exercitationem, amet soluta unde nesciunt?</p>
+            </div>
+            <div class="col-lg-4 py-2 text-center">
+                <img src="https://pbs.twimg.com/profile_images/473506797462896640/_M0JJ0v8_400x400.png" alt="img">
+                <h3 class="text-center">Title</h3>
+                <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vero saepe ratione hic corporis modi laboriosam omnis libero nobis numquam ab aspernatur inventore eius quis exercitationem, amet soluta unde nesciunt?</p>
+            </div>
             <div class="col-lg-4 py-2 text-center">
                 <img src="https://pbs.twimg.com/profile_images/473506797462896640/_M0JJ0v8_400x400.png" alt="img">
                 <h3 class="text-center">Title</h3>
