--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <li class="p-3"><a href="#">關於我們</a></li>
                         <li class="p-3"><a href="#">產品</a></li>
                         <li class="p-3"><a href="#">購物車</a></li>
+                        <li><a href="#">連結</a></li>
                     </ul>
                 </div>
             </div>
