--- a/index.html
+++ b/index.html
@@ -102,6 +102,23 @@
     <footer class="bg-secondary py-2">
         <p class="m-0 text-center text-center text-light">copyright</p>
     </footer>
+    <!-- test -->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <a href=""></a>
+                <p>lorem*1</p>
+            </div>
+            <div class="col">
+                <a href=""></a>
+                <p>lorem*1</p>
+            </div>
+            <div class="col">
+                <a href=""></a>
+                <p>lorem*1</p>
+            </div>
+        </div>
+    </div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
